--- a/lab1/part1/index.html
+++ b/lab1/part1/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-<body>
 <!--
 Name: David Orellana
 Date: Jan 13th 2025
@@ -35,6 +34,8 @@ p, li, dd, dt, address {
   line-height: 1.5;
 }
 </style>
+</head>
+<body>
 
 <address class="sender-column">
 <b>Dr. Eleanor Gaye<br></b>
@@ -53,6 +54,7 @@ USA<br>
 <i>4321 Cliff Top Edge<br></i>
 <i>Dover, CT9 XXX<br></i>
 <i>UK<br></i>
+
 
 <br>
 
@@ -113,5 +115,6 @@ Dear Eileen,
 Dr Eleanor Gaye</p>
 
 <p>University of Awesome motto: "Be awesome to each other." -- <i>The memoirs of Bill S Preston, Esq</i></p>
-</html>
+
 </body>
+</html>
