--- a/lab1/part1/index.html
+++ b/lab1/part1/index.html
@@ -102,7 +102,7 @@ Dear Eileen,
 
 <p>Polynesian chicken dance</p>
 
-<p style="margin-right: 20px;">little known but very influential dance dating back as far as 300BC, a whole village would dance around in a circle like chickens, to encourage their livestock to be "fruitful".</p>
+<p style="margin-left: 20px;">little known but very influential dance dating back as far as 300BC, a whole village would dance around in a circle like chickens, to encourage their livestock to be "fruitful".</p>
 
 
 <p>Icelandic brownian shuffle</p>
