--- a/lab1/part2/index.html
+++ b/lab1/part2/index.html
@@ -9,7 +9,10 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
     <![endif]-->
   </head>
-
+<!--
+Name: David Orellana
+Date: Jan 13th 2025
+-->
   <body>
 
       <h1>Birdwatching</h1>
