--- a/lab1/part2/index.html
+++ b/lab1/part2/index.html
@@ -16,7 +16,7 @@ Date: Jan 13th 2025
   <body>
 
       <h1>Birdwatching</h1>
-      <img src="dove.png" alt="a simple dove logo"/>
+      <img src="dove.png" alt="a simple dove logo">
 
 
       <ul>
