--- a/lab1/part2/index.html
+++ b/lab1/part2/index.html
@@ -14,10 +14,10 @@ Name: David Orellana
 Date: Jan 13th 2025
 -->
   <body>
-
+    <header>
       <h1>Birdwatching</h1>
       <img src="dove.png" alt="a simple dove logo">
-
+    </header>
 
       <ul>
         <li><span>Home</span></li>
