--- a/lab1/part2/index.html
+++ b/lab1/part2/index.html
@@ -19,14 +19,15 @@ Date: Jan 13th 2025
       <img src="dove.png" alt="a simple dove logo">
     </header>
 
-      <ul>
+   <nav>
+    <ul>
         <li><span>Home</span></li>
         <li><a href="#">Get started</a></li>
         <li><a href="#">Photos</a></li>
         <li><a href="#">Gear</a></li>
         <li><a href="#">Forum</a></li>
       </ul>
-
+    </nav>
 
       <h2>Welcome</h2>
 
