--- a/lab1/part2/index.html
+++ b/lab1/part2/index.html
@@ -28,12 +28,19 @@ Date: Jan 13th 2025
         <li><a href="#">Forum</a></li>
       </ul>
     </nav>
+    
      <main>
+      <article>
       <h2>Welcome</h2>
 
-      <p>Welcome to our fake birdwatching site. If this were a real site, it would be the ideal place to come to learn more about birdwatching, whether you are a beginner looking to learn how to get into birding, or an expert wanting to share ideas, tips, and photos with other like-minded people.</p>
+      <p>Welcome to our fake birdwatching site. If this were a 
+        real site, it would be the ideal place to come to learn more about birdwatching, 
+        whether you are a beginner looking to learn how to get into birding, or an expert 
+        wanting to share ideas, tips, and photos with other like-minded people.</p>
 
-      <p>So don't waste time! Get what you need, then turn off that computer and get out into the great outdoors!</p>
+      <p>So don't waste time! Get what you need, then turn off that computer and get out
+       into the great outdoors!</p>
+      </article>
     </main>
 
       <h2>Favourite photos</h2>
