--- a/lab1/part2/index.html
+++ b/lab1/part2/index.html
@@ -31,6 +31,7 @@ Date: Jan 13th 2025
     
      <main>
       <article>
+        <aside>
       <h2>Welcome</h2>
 
       <p>Welcome to our fake birdwatching site. If this were a 
@@ -40,6 +41,7 @@ Date: Jan 13th 2025
 
       <p>So don't waste time! Get what you need, then turn off that computer and get out
        into the great outdoors!</p>
+        </aside>
       </article>
     </main>
 
