--- a/lab2/part1/index.html
+++ b/lab2/part1/index.html
@@ -99,8 +99,7 @@
   <body>
     <header>
       <h1>Mozilla</h1>
-      <!-- insert <img> element, link to the small
-          version of the Firefox logo -->
+      <img scr="mozilla red head400.png" alt="firefox logo">
 
     </header>
 
