--- a/lab2/part1/index.html
+++ b/lab2/part1/index.html
@@ -99,7 +99,7 @@
   <body>
     <header>
       <h1>Mozilla</h1>
-      <img scr="firefox logo400.png" alt="firefox logo">
+      <img src="firefox logo400.png" alt="firefox logo">
 
     </header>
 
