--- a/lab2/part1/index.html
+++ b/lab2/part1/index.html
@@ -120,7 +120,7 @@
           <img src="originals\firefox logo.png" alt="firefox logo">
         </a>
         <a href="https://www.mozilla.org/">
-          <img>
+          <img src="originals\mozilla red head.png" alt="mozilla logo">
         </a>
         <a href="https://addons.mozilla.org/">
           <img>
