--- a/lab2/part1/index.html
+++ b/lab2/part1/index.html
@@ -123,7 +123,7 @@
           <img src="originals\mozilla red head.png" alt="mozilla logo">
         </a>
         <a href="https://addons.mozilla.org/">
-          <img>
+          <img src="originals\firefox puzzle.jpg" alt="firefox puzzle">
         </a>
         <a href="https://developer.mozilla.org/en-US/">
           <img>
