--- a/lab2/part1/index.html
+++ b/lab2/part1/index.html
@@ -126,7 +126,7 @@
           <img src="originals\firefox puzzle.jpg" alt="firefox puzzle">
         </a>
         <a href="https://developer.mozilla.org/en-US/">
-          <img>
+          <img src="originals\mdn logo.svg" alt="mdn logo">
         </a>
         <div class="clearfix"></div>
       </div>
