--- a/lab2/part1/index.html
+++ b/lab2/part1/index.html
@@ -132,7 +132,7 @@
       </div>
 
       <div class="red-panda">
-        <!-- insert picture element -->
+      <img src="red panda400.jpg" alt="red panda">
       </div>
 
     </main>
