--- a/lab2/part1/index.html
+++ b/lab2/part1/index.html
@@ -6,6 +6,14 @@
     <title>Mozilla splash page</title>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <style>
+
+/*
+	Name: Your Name
+	File: filename.html
+	Date: XX September 202X
+	A very brief description of the file.
+*/
+
       /* header and body setup */
 
       html {
@@ -99,7 +107,7 @@
   <body>
     <header>
       <h1>Mozilla</h1>
-      <img src="firefox logo400.png" alt="firefox logo">
+      <img src="firefoxlogo400.png" alt="firefox logo">
 
     </header>
 
