--- a/lab2/part1/index.html
+++ b/lab2/part1/index.html
@@ -8,10 +8,9 @@
     <style>
 
 /*
-	Name: Your Name
-	File: filename.html
-	Date: XX September 202X
-	A very brief description of the file.
+	Name: David Orellana
+	File: index.html
+	Date:  2/5/2025
 */
 
       /* header and body setup */
@@ -125,16 +124,16 @@
       <div class="further-info">
         <!-- insert images with srcsets and sizes -->
         <a href="https://www.mozilla.org/en-US/firefox/new/">
-          <img src="originals\firefox logo.png" alt="firefox logo">
+          <img src="originals\firefoxlogo.png" alt="firefox logo">
         </a>
         <a href="https://www.mozilla.org/">
-          <img src="originals\mozilla red head.png" alt="mozilla logo">
+          <img src="originals\mozillaredhead.png" alt="mozilla logo">
         </a>
         <a href="https://addons.mozilla.org/">
           <img src="originals\firefox puzzle.jpg" alt="firefox puzzle">
         </a>
         <a href="https://developer.mozilla.org/en-US/">
-          <img src="originals\mdn logo.svg" alt="mdn logo">
+          <img src="originals\mdnlogo.svg" alt="mdn logo">
         </a>
         <div class="clearfix"></div>
       </div>
