--- a/lab2/part1/index.html
+++ b/lab2/part1/index.html
@@ -124,16 +124,16 @@
       <div class="further-info">
         <!-- insert images with srcsets and sizes -->
         <a href="https://www.mozilla.org/en-US/firefox/new/">
-          <img src="originals\firefoxlogo.png" alt="firefox logo">
+          <img src="originals\firefoxlogo.png" alt="firefox_logo">
         </a>
         <a href="https://www.mozilla.org/">
-          <img src="originals\mozillaredhead.png" alt="mozilla logo">
+          <img src="originals\mozillaredhead.png" alt="mozilla_logo">
         </a>
         <a href="https://addons.mozilla.org/">
-          <img src="originals\firefox puzzle.jpg" alt="firefox puzzle">
+          <img src="originals\firefox puzzle.jpg" alt="firefox_puzzle">
         </a>
         <a href="https://developer.mozilla.org/en-US/">
-          <img src="originals\mdnlogo.svg" alt="mdn logo">
+          <img src="originals\mdnlogo.svg" alt="mdn_logo">
         </a>
         <div class="clearfix"></div>
       </div>
