--- a/lab2/part2/index.html
+++ b/lab2/part2/index.html
@@ -7,7 +7,7 @@
     <link href="minimal-table.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <h1>Table template</h1>
+    <h1>Planet data</h1>
 
 
   </body>
