--- a/lab2/part2/index.html
+++ b/lab2/part2/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Planet <data value=""></data></title>
+    <title>Planet data</title>
     <link href="minimal-table.css" rel="stylesheet" type="text/css">
   </head>
   <body>
