--- a/lab2/part2/index.html
+++ b/lab2/part2/index.html
@@ -8,7 +8,13 @@
   </head>
   <body>
     <h1>Planet data</h1>
+ <table>
+    <thead>
+<tbody>
 
+</tbody>
+    </thead>
+ </table>
 
   </body>
 </html>
