--- a/lab2/part2/index.html
+++ b/lab2/part2/index.html
@@ -13,11 +13,26 @@
         Data about the planets of our solar system (Planetary facts taken 
         from <a href="http://nssdc.gsfc.nasa.gov/planetary/factsheet/">Nasa's Planetary Fact Sheet - Metric</a>). </caption>
     <thead>
-<tbody>
+        <tr>
+            <td colspan="2"></td>
+            </td>
+        </tr>
 
-</tbody>
     </thead>
+    <tbody>
+
+    </tbody>
  </table>
+
+
+
+
+
+
+
+
+
+
 
   </body>
 </html>
