--- a/lab2/part2/index.html
+++ b/lab2/part2/index.html
@@ -31,6 +31,11 @@
 
     </thead>
     <tbody>
+        <tr>
+            <th>
+             Terrestrial planets
+            </th>
+        </tr>
 
     </tbody>
  </table>
