--- a/lab2/part2/index.html
+++ b/lab2/part2/index.html
@@ -32,7 +32,7 @@
     </thead>
     <tbody>
         <tr>
-            <th>
+            <th colspan="2">
              Terrestrial planets
             </th>
         </tr>
