--- a/lab2/part2/index.html
+++ b/lab2/part2/index.html
@@ -35,6 +35,7 @@
             <th colspan="2">
              Terrestrial planets
             </th>
+            <th>Mercury</th>
         </tr>
 
     </tbody>
