--- a/lab2/part2/index.html
+++ b/lab2/part2/index.html
@@ -36,6 +36,15 @@
              Terrestrial planets
             </th>
             <th>Mercury</th>
+            <th>0.330</th>
+            <th>4,879</th>
+            <th>5427</th>
+            <th>3.7</th>
+            <th>4222.6</th>
+            <th>57.9 </th>
+            <th>167</th>
+            <th>0</th>
+            <th>Closest to the Sun</th>
         </tr>
 
     </tbody>
