--- a/lab2/part2/index.html
+++ b/lab2/part2/index.html
@@ -46,6 +46,9 @@
             <th>0</th>
             <th>Closest to the Sun</th>
         </tr>
+        <tr>
+            <th>Venus</th>
+        </tr>
 
     </tbody>
  </table>
