--- a/lab2/part2/index.html
+++ b/lab2/part2/index.html
@@ -32,7 +32,7 @@
     </thead>
     <tbody>
         <tr>
-            <th colspan="2">
+            <th colspan="2" rowspan="4">
              Terrestrial planets
             </th>
             <th>Mercury</th>
