--- a/lab2/part2/index.html
+++ b/lab2/part2/index.html
@@ -49,6 +49,17 @@
         <tr>
             <th>Venus</th>
         </tr>
+        <tr>
+            <th>Venus</th>
+        </tr>
+
+        <tr>
+            <th>Earth</th>
+        </tr>
+
+        <tr>
+            <th>Mars</th>
+        </tr>
 
     </tbody>
  </table>
