--- a/lab2/part2/index.html
+++ b/lab2/part2/index.html
@@ -60,6 +60,11 @@
             <th>Mars</th>
         </tr>
 
+        <tr>
+            <th rowspan="4">Jovian planets</th>
+
+        </tr>
+
     </tbody>
  </table>
 
