--- a/lab2/part2/index.html
+++ b/lab2/part2/index.html
@@ -33,7 +33,8 @@
     <tbody>
         <tr>
             <th colspan="2" rowspan="4">
-             Terrestrial planets
+             Terrestrial 
+             planets
             </th>
             <th>Mercury</th>
             <th>0.330</th>
