--- a/lab2/part2/index.html
+++ b/lab2/part2/index.html
@@ -63,7 +63,7 @@
 
         <tr>
             <th rowspan="4">Jovian planets</th>
-            <th> Gas Giants</th>
+            <th rowspan="2"> Giants</th>
 
         </tr>
 
