--- a/lab2/part2/index.html
+++ b/lab2/part2/index.html
@@ -66,7 +66,10 @@
             <th rowspan="2"> Giants</th>
         </tr>
  
-
+        <tr>
+            <th rowspan="2">Ice giants</th>
+        
+        </tr>
 
 
     </tbody>
