--- a/lab2/part2/index.html
+++ b/lab2/part2/index.html
@@ -67,7 +67,19 @@
         </tr>
  
         <tr>
-            <th rowspan="2">Ice giants</th>
+            <th>Jupiter</th>
+            <th>1898 </th>
+            <th>142,984</th>
+            <th>1326</th>
+            <th>23.1</th>
+            <th>9.9 </th>
+            <th>778.6</th>
+            <th>-110</th>
+            <th>67</th>
+            <th>The largest planet</th>
+
+            Jupiter 1898 142,984 1326 23.1 9.9 778.6 -110 67 The largest planet
+
         
         </tr>
 
