--- a/lab2/part2/index.html
+++ b/lab2/part2/index.html
@@ -59,6 +59,16 @@
 
         <tr>
             <th>Mars</th>
+            <th>0.642  </th>
+            <th>6,792</th>
+            <th>3933</th>
+            <th>3.7</th>
+            <th> 24.7</th>
+            <th>227.9</th>
+            <th>-65</th>
+            <th>2</th>
+            <th>The red planet</th>
+
         </tr>
 
         <tr>
@@ -78,7 +88,6 @@
             <th>67</th>
             <th>The largest planet</th>
 
-            Jupiter 1898 142,984 1326 23.1 9.9 778.6 -110 67 The largest planet
 
         
         </tr>
