--- a/lab2/part2/index.html
+++ b/lab2/part2/index.html
@@ -55,6 +55,16 @@
 
         <tr>
             <th>Earth</th>
+            <th>5.97  </th>
+            <th>12,756</th>
+            <th>55114</th>
+            <th>9.8</th>
+            <th> 24.0</th>
+            <th>146.6</th>
+            <th>15</th>
+            <th>1</th>
+            <th>Our world</th>
+            
         </tr>
 
         <tr>
