--- a/lab2/part2/index.html
+++ b/lab2/part2/index.html
@@ -32,10 +32,7 @@
     </thead>
     <tbody>
         <tr>
-            <th colspan="2" rowspan="4">
-             Terrestrial 
-             planets
-            </th>
+            <th colspan="4" rowspan="4"> Terrestrial planets</th>
             <th>Mercury</th>
             <th>0.330</th>
             <th>4,879</th>
@@ -61,7 +58,7 @@
             <th>0</th>
             <th> </th>
         </tr>
-        <tr>
+         <tr>
             <th>Earth</th>
             <th>5.97  </th>
             <th>12,756</th>
