--- a/lab2/part2/index.html
+++ b/lab2/part2/index.html
@@ -88,7 +88,7 @@
 
         <tr>
             <th rowspan="4">Jovian planets</th>
-            <th rowspan="2"> Giants</th>
+            <th rowspan="2">Gas Giants</th>
         </tr>
  
         <tr>
