--- a/lab2/part2/index.html
+++ b/lab2/part2/index.html
@@ -106,6 +106,14 @@
 
         
         </tr>
+        
+        <tr>
+            <th> Saturn</th>
+ 
+        </tr>
+
+
+
         <th rowspan="2"> Ice Giants</th>
 
     </tbody>
