--- a/lab2/part2/index.html
+++ b/lab2/part2/index.html
@@ -108,7 +108,7 @@
         </tr>
         
         <tr>
-            <th> Saturn</th>
+            <th rowspan="2"> Saturn</th>
  
         </tr>
 
