--- a/lab2/part2/index.html
+++ b/lab2/part2/index.html
@@ -132,6 +132,9 @@
             <th>27</th>
             <th> </th>
        </tr>
+       <tr>
+        <th>Neptune</th>
+       </tr>
      
     </tbody>
  </table>
