--- a/lab2/part2/index.html
+++ b/lab2/part2/index.html
@@ -143,8 +143,11 @@
         <th>-200</th>
         <th>14</th>
         <th></th>
+       </tr>
+    <tr>
+        <th>Dwarf Planets</th>
+    </tr>
 
-        102 49,528 1638 11.0 16.1 4495.1 -200 14
      
     </tbody>
  </table>
