--- a/lab2/part2/index.html
+++ b/lab2/part2/index.html
@@ -145,7 +145,7 @@
         <th></th>
        </tr>
     <tr>
-        <th>Dwarf Planets</th>
+        <th rowspan="2"> Planets</th>
     </tr>
 
      
