--- a/lab2/part2/index.html
+++ b/lab2/part2/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-US">
+
+
+<!--
+	Name: david orellana
+	Date: 2/6/2025
+	-->
+
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
