--- a/lab2/part2/index.html
+++ b/lab2/part2/index.html
@@ -39,7 +39,7 @@
     </thead>
     <tbody>
         <tr>
-            <th colspan="2"> Terrestrial planets</th>
+            <th colspan="2" rowspan="4"> Terrestrial planets</th>
             <th>Mercury</th>
             <th>0.330</th>
             <th>4,879</th>
@@ -152,7 +152,7 @@
         <th></th>
        </tr>
     <tr>
-        <th colspan="2" rowspan="4">dwarf Planets</th>
+        <th colspan="2">dwarf Planets</th>
     <th>Pluto</th>
     <th>0.0146</th>
     <th>2,370</th>
