--- a/lab3/part1/index.html
+++ b/lab3/part1/index.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+
+
+
+
+
+
 <h1>Jane Doe</h1>
 <div class="job-title">Web Developer</div>
 <p>
