--- a/lab3/part1/index.html
+++ b/lab3/part1/index.html
@@ -7,8 +7,10 @@
 
 
 
-
+<header>
 <h1>Jane Doe</h1>
+</header>
+
 <div class="job-title">Web Developer</div>
 <p>
   Far far away, behind the word mountains, far from the countries Vokalia and
