--- a/lab3/part1/index.html
+++ b/lab3/part1/index.html
@@ -5,12 +5,24 @@
 
     <link href="janedoe.css" rel="stylesheet" type="text/css">
 
+    <style>
+      h1 {
+    color: hotpink;
+    font-size: 2em;
+    font-family: Georgia, "Times New Roman", Times, serif;
+    border-bottom: 10px dotted purple;
+  }
+    </style>
 
 
 
 <head>
 <h1>Jane Doe</h1>
 </head>
+
+
+
+
 
 <div class="job-title">Web Developer</div>
 <p>
