--- a/lab3/part1/index.html
+++ b/lab3/part1/index.html
@@ -11,7 +11,19 @@
     font-size: 2em;
     font-family: Georgia, "Times New Roman", Times, serif;
     border-bottom: 10px dotted purple;
+
   }
+  
+  a:link,
+  a:visited {
+    background-color: #eeeeee;
+    border: 5px solid purple;
+    color: #fb6542;
+  }
+
+
+    
+  
     </style>
 
 
