--- a/lab3/part1/index.html
+++ b/lab3/part1/index.html
@@ -2,13 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-
     <link href="janedoe.css" rel="stylesheet" type="text/css">
-
+<title>Styling a biography page</title>
     
 
-
-
+<body>
 <h1>Jane Doe</h1>
 
 
@@ -36,3 +34,5 @@
   <li>Web: <a href="http://example.com">http://example.com</a></li>
   <li>Tel: 123 45678</li>
 </ul>
+</body>
+</html>
