--- a/lab3/part1/index.html
+++ b/lab3/part1/index.html
@@ -5,7 +5,32 @@
     <link href="janedoe.css" rel="stylesheet" type="text/css">
 <title>Styling a biography page</title>
     
+<style>
+  body {
+max-width: 800px;
+margin: 0 auto;
+}
 
+.sender-column {
+text-align: right;
+}
+
+h1 {
+font-size: 1.5em;
+}
+
+h2 {
+font-size: 1.3em;
+}
+
+p,ul,ol,dl,address {
+font-size: 1.1em;
+}
+
+p, li, dd, dt, address {
+line-height: 1.5;
+}
+</style>
 <body>
 <h1>Jane Doe</h1>
 
