--- a/lab3/part2/index.html
+++ b/lab3/part2/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Cool box</title>
-    <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="box.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <div>This is a cool box</div>
