--- a/lab3/part4/index.html
+++ b/lab3/part4/index.html
@@ -66,7 +66,7 @@
       </h2>
       <ul class="photos">
         <li>
-          <img src="images/balloon-sq1.jpg" alt="placeholder">
+          <img src="images/balloon-sq6" alt="placeholder">
         </li>
         <li>
           <img src="images/balloon-sq2.jpg" alt="placeholder">
