--- a/lab3/part4/index.html
+++ b/lab3/part4/index.html
@@ -7,6 +7,11 @@
     <link href="balloons.css" rel="stylesheet" type="text/css">
   </head>
 
+  <!--
+Name: David Orellana
+Date: Jan 13th 2025
+-->
+
 <body>
 
   <div class="logo">
