--- a/lab3/part1/index.html
+++ b/lab3/part1/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8">
     <link href="janedoe.css" rel="stylesheet" type="text/css">
 <title>Styling a biography page</title>
+  <!--
+Name: David Orellana
+Date: Jan 13th 2025
+-->
+
     
 <style>
   body {
