--- a/lab3/part2/index.html
+++ b/lab3/part2/index.html
@@ -6,7 +6,12 @@
     <title>Cool box</title>
     <link href="box.css" rel="stylesheet" type="text/css">
   </head>
-  3
+    <!--
+Name: David Orellana
+Date: Jan 13th 2025
+description: to create a red square box
+-->
+
   <body>
     <div>This is a cool box</div>
     
