--- a/lab3/part4/index.html
+++ b/lab3/part4/index.html
@@ -9,7 +9,8 @@
 
   <!--
 Name: David Orellana
-Date: Jan 13th 2025
+Date: feb 21 2025
+desciption: to create a formated page using css elements
 -->
 
 <body>
