--- a/practice/index.html
+++ b/practice/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Apply JavaScript example</title>
-    <script defer src="script.js"></script>
+    <script type="module" src="script.js"></script>
   </head>
   <body>
     <button>Click me</button>
