--- a/practice/index (2).html
+++ b/practice/index (2).html
@@ -49,6 +49,12 @@
 
       // Your JavaScript goes here
 
+      let randomNumber = Math.floor(Math.random() + 100 )+ 1;
+
+      const guesses = document.querySelector(".guesses");
+      const lastResult = document.querySelector(".lastResult");
+      const lowOrHi = document.querySelector(".lowOrHi");
+
     </script>
   </body>
 </html>
