--- a/practice/index (2).html
+++ b/practice/index (2).html
@@ -55,6 +55,12 @@
       const lastResult = document.querySelector(".lastResult");
       const lowOrHi = document.querySelector(".lowOrHi");
 
+      const guessSubmit = document.querySelector(".guessSubmit");
+      const guessField = document.querySelector(".guessField");
+
+      let guessCount = 1;
+      let resetButton;
+
     </script>
   </body>
 </html>
