--- a/practice/index (2).html
+++ b/practice/index (2).html
@@ -61,6 +61,13 @@
       let guessCount = 1;
       let resetButton;
 
+      function checkGuess(){
+        alert(" I am a placeHolder");
+      }
+
+
+
+
     </script>
   </body>
 </html>
