--- a/practice/index (2).html
+++ b/practice/index (2).html
@@ -62,8 +62,41 @@
       let resetButton;
 
       function checkGuess(){
-        alert(" I am a placeHolder");
+        const userGuess = Number(guessField.value);
+        if (guessCount == 1){
+            guesses.textContent = "previous guesses:";
+
       }
+      guesses.textContent = '${guesses.textContent} ${userGuess}';
+
+      if (userGuess === randomNumber){
+        lastResult.textContent = "congrats! you got it right!";
+        lastResult.style.backgroundColor= "green";
+        lowOrHi.textContent= "";
+        setGameOver();
+
+      } else if (guessCount === 10) {
+
+        lastResult.textContent = "game Over!";
+        lowOrHi.textContent = "";
+        setGameOver();
+
+      } else {
+        lastResult.textContent = "Wrong";
+        lastResult.stylebackgroundColor = "red";
+        If (userGuess < randomNumber) {
+            lowOrHi.textContent = "last guess was to low";
+
+        } else if (userGuess > randomNumber) {
+            lowOrHi.textContent = "last guess was to high";
+        }
+      }
+
+      guessCount++;
+      guessField.value = "";
+      guessField.focus();
+
+    }
 
 
 
