--- a/practice/index (2).html
+++ b/practice/index (2).html
@@ -62,6 +62,7 @@
       let resetButton;
 
       function checkGuess(){
+        guessSubmit.addEventListener("click", checkGuess);
         const userGuess = Number(guessField.value);
         if (guessCount == 1){
             guesses.textContent = "previous guesses:";
@@ -85,13 +86,14 @@
         lastResult.textContent = "Wrong";
         lastResult.stylebackgroundColor = "red";
         If (userGuess < randomNumber) {
-            lowOrHi.textContent = "last guess was to low";
+        lowOrHi.textContent = "last guess was to low";
 
-        } else if (userGuess > randomNumber) {
+        }else if (userGuess > randomNumber) {
             lowOrHi.textContent = "last guess was to high";
         }
+    
       }
-
+      
       guessCount++;
       guessField.value = "";
       guessField.focus();
