--- a/practice/index (2).html
+++ b/practice/index (2).html
@@ -115,15 +115,15 @@ function gameReset(){
     guessCount = 1;
 
     const resetParas = document.querySelectorAll(".resultParas p");
-    for (const resetParas of resetParas){
+    for (const resetPara of resetParas){
         resetPara.textContent = "";
 
 }
 
-resetButton.parentNpode.removeChild(resetButton)
+resetButton.parentNode.removeChild(resetButton)
 
 guessField.disabled = false;
-guessField.disabled = false;
+guessSubmit.disabled = false;
 guessField.value = "";
 guessField.focus();
 
