--- a/practice/index (2).html
+++ b/practice/index (2).html
@@ -68,7 +68,7 @@
             guesses.textContent = "previous guesses:";
       }
 
-      guesses.textContent = '${guesses.textContent} ${userGuess}';
+      guesses.textContent = `${guesses.textContent} ${userGuess}`;
 
       if (userGuess === randomNumber){
         lastResult.textContent = "congrats! you got it right!";
