--- a/practice/index (2).html
+++ b/practice/index (2).html
@@ -111,7 +111,7 @@
 }
 
 
-function gameReset(){
+function resetGame(){
     guessCount = 1;
 
     const resetParas = document.querySelectorAll(".resultParas p");
