--- a/lab4/part 1/index.html
+++ b/lab4/part 1/index.html
@@ -5,6 +5,21 @@
     <meta name="viewport" content="width=device-width" />
     <script type="module" src="main.js"></script>
 
+
+<!--
+
+         Name: david orellana
+
+         File: index.html
+
+         Date: 4/4/2025
+
+         this is part of a program that generaytes a random silly story
+
+-->
+
+
+
     <title>Silly story generator</title>
 
     <style>
