--- a/lab4/part2/gallery-start/gallery-start/index.html
+++ b/lab4/part2/gallery-start/gallery-start/index.html
@@ -18,10 +18,9 @@
       <button class="dark">Darken</button>
     </div>
 
-    <div class="thumb-bar">
+    <div class="thumb-bar"></div>
 
-
-    </div>
+    
     <script src="main.js"></script>
   </body>
 </html>
