--- a/lab4/part2/index.html
+++ b/lab4/part2/index.html
@@ -6,7 +6,7 @@
     <title>Image gallery</title>
 
     <link rel="stylesheet" href="style.css">
-    <script src = "main.js"></script>
+    <script type="module" src = "main.js"></script>
     
   </head>
 
