--- a/lab4/part2/index.html
+++ b/lab4/part2/index.html
@@ -15,6 +15,14 @@
 
     <div class="full-img">
       <img class="displayed-img" src="pic1.jpg" alt="Closeup of a human eye">
+      <img class="displayed-img" src="pic2.jpg" alt="Closeup of a human eye">
+      <img class="displayed-img" src="pic3.jpg" alt="Closeup of a human eye">
+      <img class="displayed-img" src="pic4.jpg" alt="Closeup of a human eye">
+      <img class="displayed-img" src="pic5.jpg" alt="Closeup of a human eye">
+
+
+
+
       <div class="overlay"></div>
       <button class="dark">Darken</button>
     </div>
