--- a/lab4/part2/index.html
+++ b/lab4/part2/index.html
@@ -14,6 +14,11 @@
 
     <div class="full-img">
       <img class="displayed-img" src="images/pic1.jpg" alt="Closeup of a human eye">
+      <img class="displayed-img" src="images/pic2.jpg" alt="Closeup of a human eye">
+      <img class="displayed-img" src="images/pic3.jpg" alt="Closeup of a human eye">
+      <img class="displayed-img" src="images/pic4.jpg" alt="Closeup of a human eye">
+      <img class="displayed-img" src="images/pic5.jpg" alt="Closeup of a human eye">
+
       
 
       <div class="overlay"></div>
