--- a/webAC/index.html
+++ b/webAC/index.html
@@ -99,10 +99,10 @@
         <br><br>
 
         <audio controls>
-          <source src="media/bear.mp3" type="audio/mp3">
-          <source src="media/bear.ogg" type="audio/ogg">
+          <source src="bear.mp3" type="audio/mp3">
+          <source src="bear.ogg" type="audio/ogg">
           <p>It looks like your browser doesn't support HTML5 audio players.</p>
-         <a href="media/bear.mp3"
+         <a href="bear.mp3"
         </audio>
 
 
