--- a/webAC/index.html
+++ b/webAC/index.html
@@ -102,6 +102,8 @@
           <source src="bear.mp3" type="audio/mp3">
           <source src="bear.ogg" type="audio/ogg">
           <p>It looks like your browser doesn't support HTML5 audio players.</p>
+          <p>This isn’t really an audio fact file about bears, but it is a audio file that you can transcribe</p>
+
          <a href="bear.mp3"
         </audio>
 
