--- a/webAC/index.html
+++ b/webAC/index.html
@@ -104,7 +104,7 @@
           <p>It looks like your browser doesn't support HTML5 audio players.</p>
           <p>This isnt really an audio fact file about bears, but it is a audio file that you can transcribe</p>
 
-         <a href="bear.mp3"
+         <a href="bear.mp3"></a>
         </audio>
 
 
