--- a/webAC/index.html
+++ b/webAC/index.html
@@ -106,7 +106,7 @@
          <a href="bear.mp3"></a>
         </audio>
 
-        <p>This isnt really an audio fact file about bears, but it is a audio file that you can transcribe</p>
+        <p>This isnt really an audio fact file about bears, but it is an audio file that you can transcribe</p>
 
 
         <aside>
